[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "vizz"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
vizz = "vizz.__main__:main"

[tool.kedro]
package_name = "vizz"
project_name = "vizz"
kedro_init_version = "0.19.3"
tools = [ "Kedro Viz",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "vizz.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
